Top alignment fix

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,7 +16,7 @@
 	position: absolute;
 	font-family: "Lato", sans-serif;
 	font-weight: 300;
-	top: -17px;
+	top: -15px;
 	width: 100%;
 }
 .spread_and_bell {
